# Tech-Pulse

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  build.sh  check_pipeline.py  main.py  pyproject.toml  render.yaml  requirements.txt  test_endpoint.py  test_pruning.py
docs/: ai_writeup.md  cleaning_decisions.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/layouts/: Layout.tsx
frontend/src/pages/: ArticleDetail.css  ArticleDetail.tsx  Articles.css  Articles.tsx  Dashboard.tsx
src/: __init__.py  config.py
src/ai/: __init__.py  categorizer.py
src/api/: __init__.py  main.py  routes.py
src/cleaning/: __init__.py  data_cleaner.py
src/database/: __init__.py  db.py  models.py
src/scheduler/: __init__.py  jobs.py
src/scrapers/: __init__.py  base_scraper.py  github_trending.py  hackernews.py  producthunt.py  techcrunch.py  venturebeat.py
static/: style.css
templates/: article_detail.html  articles.html  base.html  dashboard.html
tests/: test_scrapers.py
